Fix profile thumanails not visible

--- a/style/forms.css
+++ b/style/forms.css
@@ -50,6 +50,17 @@
 	width: 50%;
 	float: left;
 }
+#rblayout-seven #profile-carousel .slides > li figure {
+	height: 150px;
+}
+#rblayout-seven #profile-carousel .slides > li figure span {
+	float: left;
+	width: 100%;
+	height: 100%;
+}
+#rblayout-seven #profile-carousel .slides > li figure.multi span {
+	width: 50%;
+}
 #rblayout-seven #profile-links {
 	padding: 15px 0px;
 	text-align: right;
